# triangulation-planar-embedding

./: CMakeLists.txt  README.md
data/: config.json
data/input/: 3-6-12-13-1,3.json  3-8-13-3,3.json  icosa_3_11_7.json  icosa_3_6_5_1.json  icosa_3_6_6.json  icosa_3_7_4.json  icosahedra.json  icosahedron.json  k4.json  triangle.json
data/output/: demo_triangle.json  icosa_3_6_6.json  icosa_3_7_4.json  icosahedron.json  triangle.json
script/: make_test.sh  makemake.sh  test.sh  visualize.py
src/: config.h  data.h  embedding.h  graph.h  mapper.h
src/common/: debug.h  global.cxx  global.h  math.cxx  math.h  notation.h  random.cxx  random.h  terminal.h  tree.h
src/geometry/: cartesian.h  polygon.h
src/io/: reader.cxx  reader.h  writer.cxx  writer.h
src/searcher/: graph_searcher.cxx  graph_searcher.h  walk_searcher.cxx  walk_searcher.h
src/solver/: merged_ring_in_ring.h  ring_in_ring.h  ring_in_ring_trimmer.h  solver.h  solver_ring_in_ring.cxx  solver_ring_in_ring.h  walk_manager.h
src/solver/closed_walk_tree/: closed_walk.h  closed_walk_tree.h  closed_walk_vector.h
src/solver/walk_triangle/: guard_path.h  walk_guard.h  walk_triangle.h
src/subgraph/: edge_inducer.h  vertex_inducer.h
src/tiler/: balance_tiler.cxx  balance_tiler.h  tiler.h
src/topology/: birk_2_6_4.h  complete_graph.h  complete_result.h  complete_three.h  icosa_3_6_6.h  icosa_3_7_4.h  icosahedron.h  ring.h
test/: CMakeLists.txt  test_graph.cxx
test/complete_graph/: .test_complete_graph.cxx.swp  CMakeLists.txt  test_complete_graph.cxx
test/graph/: CMakeLists.txt  test_graph.cxx
test/graph_searcher/: CMakeLists.txt  test_graph_searcher.cxx
test/icosahedron/: CMakeLists.txt  test_icosahedron.cxx
test/random/: CMakeLists.txt  test_random.cxx
test/reader/: CMakeLists.txt  test_reader.cxx
test/solver/: CMakeLists.txt  test_solver.cxx
test/tree/: CMakeLists.txt  test_tree.cxx
test/walk_searcher/: CMakeLists.txt  test_walk_searcher.cxx
test/writer/: CMakeLists.txt  test_writer.cxx
