cmake_minimum_required(VERSION 2.8)

project(test)

add_subdirectory(graph)
add_subdirectory(reader)
add_subdirectory(writer)
add_subdirectory(complete_graph)
add_subdirectory(graph_searcher)
add_subdirectory(icosahedron)
add_subdirectory(solver)
add_subdirectory(random)
add_subdirectory(tree)
add_subdirectory(walk_searcher)

